# kicad-parser-rs

./: .gitattributes  Cargo.toml  out.txt  pcb_file.txt
examples/: InremHMI.kicad_pcb  InremHMI.kicad_pro  list_footprints.rs  pcb.rs  render_outer_pads.rs  render_top.rs
src/: lib.rs  parser.rs  parser_macros.rs  sexpr.rs
src/common/: footprint.rs  graphic.rs  mod.rs  positionals.rs
src/pcb/: mod.rs  pcb_file.rs
src/pcb_file/: mod.rs  pcb_file_general.rs  pcb_layer.rs  pcb_net.rs  pcb_property.rs  pcb_setup.rs  pcb_stack_settings.rs
src/sexpr/: mod.rs  parse_sexpr.rs  parse_sexpr_tests.rs  sexpr_list.rs
tests/: MainBoard.kicad_pcb  board.kicad_pcb  test_pcb_file.rs
