[package]
name = "kicad-parser"
version = "0.0.6"
edition = "2024"
publish =  ["devd"]

[dependencies]
anyhow = "1.0.98"
backtrace = "0.3.75"
nom = "8.0.0"
nom-language = "0.1.0"

serde = { version = "1.0.219", features = ["derive"], optional = true }


[features]
serde = ["dep:serde"]

[dev-dependencies]
clap = { version = "4.5.46", features = ["derive"] }
svg = "0.18.0"
